k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otus
  namespace: otus-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: otus
  template:
    metadata:
      name: otus
      labels:
        app: otus
    spec:
      containers:
        - image: achernyavskiy0n/otus-k8s
          name: otus
          ports:
            - name: web-port
              containerPort: 8000
          readinessProbe:
            periodSeconds: 1
            httpGet:
              path: /health/readiness
              port: 8000
            initialDelaySeconds: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 8000
            initialDelaySeconds: 50
            periodSeconds: 5
            failureThreshold: 100
            timeoutSeconds: 2
